# CMake æœ€ä½ç‰ˆæœ¬å·è¦æ±‚
cmake_minimum_required(VERSION 2.8)

# é¡¹ç›®ä¿¡æ¯
project("CodeCraft-2021")

# includeè·¯å¾„
include_directories(${PROJECT_SOURCE_DIR}/lib)

# è®¾ç½®å¯æ‰§è¡Œæ–‡ä»¶ç”Ÿæˆè·¯å¾set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)

# ç”Ÿæˆdebugç‰ˆæœ¬
# SET(CMAKE_BUILD_TYPE "debug")
# ç”Ÿæˆreleaseç‰ˆæœ¬
# SET(CMAKE_BUILD_TYPE "release")
if (CMAKE_BUILD_TYPE STREQUAL debug)
    add_definitions(-D_DEBUG)
endif ()

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -std=c++11")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++11")

# æŸ¥æ‰¾å½“å‰ç›®å½•ä¸‹çš„æ‰€æœ‰æºæ–‡ä»¶
# å¹¶å°†åç§°ä¿å­˜åˆDIR_LIB_SRCS å˜é‡
aux_source_directory(. DIR_SRCS)

# æŒ‡å®šç”Ÿæˆç›®æ ‡
add_executable(CodeCraft-2021 ${DIR_SRCS} utils.h)